# EmpatIA-backend

./: .gitignore  README.md  docker-compose.yaml  package-lock.json  pyproject.toml
apps/Accounts/: admin.py  apps.py
apps/Accounts/api/: auth.py  dependencies.py  permissions.py  schemas.py  views.py
apps/Accounts/application/: dto.py  use_cases.py
apps/Accounts/domain/: entities.py  exceptions.py  repositories.py  rules.py  services.py
apps/Accounts/infrastructure/: manager.py  models.py  repository.py
apps/Accounts/migrations/: 0001_initial.py  0002_user_is_staff_alter_user_is_superuser.py  0003_alter_user_active.py  0004_alter_user_created_at.py  0005_remove_user_password_hash_alter_user_password.py  0006_rename_user_id_token_user.py
backend/: Dockerfile  pyproject.toml
backend/apps/Accounts/api/: views.py
backend/apps/Accounts/infrastructure/: models.py
backend/apps/Accounts/migrations/: 0009_alter_user_password.py  0010_alter_user_password.py
backend/apps/Classroom/: admin.py
backend/apps/Classroom/api/: dependencies.py  schemas.py  views.py
backend/apps/Classroom/application/: dto.py  use_cases.py
backend/apps/Classroom/domain/: entities.py
backend/apps/Classroom/infrastructure/: repository.py
backend/apps/Classroom/migrations/: 0001_initial.py
backend/apps/Schools/api/: dependencies.py  schemas.py  views.py
backend/apps/Schools/application/: dto.py  use_cases.py
backend/config/: settings.py  urls.py
backend/core/redis/: client.py  exceptions.py  interfaces.py  repository.py
config/: settings.py  urls.py
frontend/: index.html
(+27 files in other folders)
