[project]
name = "empatia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=22.1.0",
    "blue>=0.9.1",
    "dependency-injector>=4.49.0",
    "django>=6.0.5",
    "django-ninja>=1.6.2",
    "dotenv>=0.9.9",
    "passlib>=1.7.4",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.12.1",
    "validate-docbr>=2.0.0",
]
